# magnum_workspace

./: .gitignore
grid_window/: CMakeLists.txt
grid_window/src/: LineDrawable.hpp  main.cpp
map_viewer/: CMakeLists.txt
map_viewer/resource/: test3.pgm  willowgarage_small.pgm
map_viewer/src/: main.cpp
